Fix: Header Letters Spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -49,10 +49,11 @@ nav ul{
 }
 
 nav li{
-    margin: 0 1.87vw 0 0;
+    margin: 0.1vw 1.75vw 0 0;
     align-content: center;
     cursor: pointer;
     transition: color 0.4s;
+    letter-spacing: -0.2px;
 }
 
 nav li:nth-child(1):hover{
@@ -82,6 +83,9 @@ nav li:nth-child(5):hover{
 
 /* ~Header*/
 /* ^Initial Banner */
+.initial-banner{
+    
+}
 
 /* ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 /* ! width 899px Styles. */
